// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connect HOC should wrap its component argument with connect 1`] = `
<div
  client={Object {}}
  data={null}
  error={null}
  fetching={false}
  loaded={false}
  refetch={[Function]}
/>
`;

exports[`Connect HOC should wrap its component argument with connect and hoist the statics 1`] = `
<div
  client={Object {}}
  data={null}
  error={null}
  fetching={false}
  loaded={false}
  refetch={[Function]}
/>
`;

exports[`Connect HOC should wrap its component argument with connect with functional options 1`] = `
<div
  cache={false}
  client={Object {}}
  data={null}
  error={null}
  fetching={false}
  loaded={false}
  refetch={[Function]}
/>
`;
